# ets-mgl869-hive

./: README.md  pyproject.toml
src/data/: hive-bugs-commits.csv
src/data/output/: hive-bugs-files.csv  hive-files-metrics-2.3.1.csv  hive-files-metrics-2.3.4.csv  hive-files-metrics-2.3.6.csv  hive-files-metrics-2.3.7.csv  hive-files-metrics-2.3.9.csv  hive-files-metrics-3.1.0.csv  hive-files-metrics-3.1.3.csv  hive-releases-last-commits.csv  releases-last-commits.csv  test.csv  test_set0.csv  test_set1.csv  test_set2.csv  test_set3.csv  test_set4.csv  test_set5.csv  test_set6.csv  test_set7.csv  test_set8.csv  test_set9.csv  train_set0_undersampling.csv  train_set1_undersampling.csv  train_set2_undersampling.csv  train_set3_undersampling.csv  train_set4_undersampling.csv  train_set5_undersampling.csv  train_set6_undersampling.csv  train_set7_undersampling.csv  train_set8_undersampling.csv  train_set9_undersampling.csv
src/data/output/files-metrics-v1/: hive-files-metrics-2.0.0.csv  hive-files-metrics-2.0.1.csv  hive-files-metrics-2.1.0.csv  hive-files-metrics-2.1.1.csv  hive-files-metrics-2.2.0.csv  hive-files-metrics-2.3.0.csv  hive-files-metrics-2.3.2.csv  hive-files-metrics-2.3.3.csv  hive-files-metrics-2.3.5.csv  hive-files-metrics-2.3.8.csv  hive-files-metrics-3.0.0.csv  hive-files-metrics-3.1.1.csv  (+1 more)
src/lab/notebooks/: analysis.ipynb  dataset.ipynb  explainability.ipynb  logistic_regression.ipynb  matching.ipynb  nomogram.R  random_forest.ipynb  versions_models.ipynb
src/lab/scripts/: logs_parser.py  metrics_extractor.bat  releases_last_commits.py
(+24 files in other folders)
