[tool.poetry]
name = "lab"
version = "0.1.0"
description = ""
authors = ["Henri Aïdasso <ahenrij@gmail.com>"]
readme = "README.md"
packages = [{include = "lab", from = "src"}]

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
