[tool.poetry]
name = "lab"
version = "0.1.0"
description = ""
authors = ["Henri Aïdasso <ahenrij@gmail.com>"]
readme = "README.md"
packages = [{include = "lab", from = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^1.5.0"
scipy = "^1.9.3"
seaborn = "^0.12.1"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.16.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
